<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:id="@+id/user"
        android:title="@string/person"
        android:icon="@drawable/baseline_person_24"
        app:showAsAction="always">


        <menu>
...
